fix: stable scrollbar which doesnt jump on scroll length

--- a/src/css/_extra.scss
+++ b/src/css/_extra.scss
@@ -211,6 +211,10 @@
   white-space: nowrap;
   position: relative;
   max-width: 100%;
+  }
+  
+  .stable-scroll-container {
+    scrollbar-gutter: stable;
 }
 
 @media (max-width: $tablet) {
